# appmana-comfyui-nodes-fluxtapoz

./: .gitignore  pyproject.toml
nodes/: add_flow_flux_node.py  flux_deguidance_node.py  influx_model_pred_node.py
